tests/NormalTests/paczka2/big_fuzzy/20123604.err
Error in line 5: k5k S260 29,23
Error in line 7: CGEXUkB7 S260 92,6
Error in line 12: CGEXUkB7 S545 78,0
Error in line 13: k5k A753 35,2
Error in line 14: CGEXUkB7 S260 75,0
Error in line 30: CGEXUkB7 A645 54,3
Error in line 32: k5k A645 29,7
Error in line 40: k5k S260 5,4
Error in line 47: ILv2JZpbTa S545 16,3
Error in line 54: ILv2JZpbTa A645 93,4
Error in line 64: k5k A753 76,1
Error in line 94: S545 S545 26,3
Error in line 93: ILv2JZpbTa A753 57,4
Error in line 98: CGEXUkB7 S260 12,7
Error in line 105: S545 S545 56,1
Error in line 99: ILv2JZpbTa A645 96,4
Error in line 113: ILvIJZpbTa SI60 67,9
Error in line 114: P3lqG8Vacy S260 18,8
Error in line 119: P3lqG8Vacy A753 5,8
Error in line 123: QycbwF7GK8b A753 98,5
Error in line 127: QycbwF7GK8b S545 36,9
Error in line 125: S545 S260 89,1
Error in line 112: ILv2JZpbTa S260 43,0
Error in line 161: CGEXUkB7 S545 86,5
Error in line 167: QycbwF7GK8b A753 46,9
Error in line 163: CGEXUkB7 A645 23,2
Error in line 104: k5k A645 387,5
Error in line 181: CGEXUkB7 S545 13,7
Error in line 186: ILv2JZpbTa S545 49,4
Error in line 189: ILv2JZpbTa S260 3,1
Error in line 193: S545 S545 69,4
Error in line 202: QycbwF7GK8b S260 57,5
Error in line 204: k5k A753 32,3
Error in line 211: mVl S545 62,7
Error in line 212: mVl A753 4,7
Error in line 221: k5k A753 77,2
Error in line 242: k5k A645 90,8
Error in line 243: k5k S545 37,3
